Constraint validator field improvement (#26)
Adds a property that enables full path field names for validation
failures. For example list requests with an 3rd item having a NotBlank
field will now return a field: "[2].someName"

Co-authored-by: Silver Ohlo <silver@bitweb.ee>